--- a/app/src/main/res/layout/openapsma_fragment.xml
+++ b/app/src/main/res/layout/openapsma_fragment.xml
@@ -21,7 +21,7 @@
 
                 <Button
                     android:id="@+id/openapsma_run"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="?android:attr/buttonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_run" />
