--- a/app/src/main/res/layout/overview_fragment.xml
+++ b/app/src/main/res/layout/overview_fragment.xml
@@ -74,7 +74,7 @@
 
             <Button
                 android:id="@+id/overview_canceltemp"
-                style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/buttonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -92,7 +92,7 @@
 
             <Button
                 android:id="@+id/overview_settempbasal"
-                style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/buttonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -102,7 +102,7 @@
 
             <Button
                 android:id="@+id/overview_extendedbolus"
-                style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/buttonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -118,7 +118,7 @@
 
             <Button
                 android:id="@+id/overview_treatment"
-                style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/buttonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -128,7 +128,7 @@
 
             <Button
                 android:id="@+id/overview_wizard"
-                style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/buttonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
