--- a/app/src/main/res/layout/tempbasals_fragment.xml
+++ b/app/src/main/res/layout/tempbasals_fragment.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tempbasals_iobtotal"
+                android:id="@+id/tempbasals_totaltempiob"
                 android:paddingLeft="10dp" />
 
         </LinearLayout>
