--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,10 @@
 
     <color name="linearBlockBackground">#3e3d3d</color>
 
+    <color name="colorAcceptTempButton">#f4d700</color>
     <color name="colorTreatmentButton">#FFB347</color>
     <color name="colorWizardButton">#77dd77</color>
-    <color name="colorCancelTempButton">#FF47C8FF</color>
+    <color name="colorCancelTempButton">#47c8ff</color>
     <color name="colorSetTempButton">#FF478EFF</color>
     <color name="colorSetExtendedButton">#FFDD7792</color>
 
