--- a/app/src/main/res/layout/objectives_fragment.xml
+++ b/app/src/main/res/layout/objectives_fragment.xml
@@ -12,8 +12,8 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enable fake time"
-            android:id="@+id/objectives_faketime" />
+            android:text="Enable fake time and progress"
+            android:id="@+id/objectives_fake" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/objectives_recyclerview"
