language selector in menu

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,6 +14,12 @@
         android:id="@+id/nav_test_alarm"
         android:title="@string/nav_test_alarm" />
     <item
+        android:id="@+id/en_lang"
+        android:title="@string/en_lang" />
+    <item
+        android:id="@+id/cs_lang"
+        android:title="@string/cs_lang" />
+    <item
         android:id="@+id/nav_exit"
         android:title="@string/nav_exit" />
 </menu>
