--- a/app/src/main/res/layout/overview_newtreatment_fragment.xml
+++ b/app/src/main/res/layout/overview_newtreatment_fragment.xml
@@ -1,69 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
-    >
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="10dp"
         android:text="@string/treatments_newtreatment_insulinamount_label"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_gravity="center_horizontal"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <EditText
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/treatments_newtreatment_insulinamount"
-        android:padding="10dp"
-        android:minWidth="200dp"
         android:layout_gravity="center_horizontal"
-        android:inputType="numberDecimal"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/treatments_newtreatment_insulinamount_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/circle"
+            android:backgroundTint="#ffffff"
+            android:src="@drawable/ic_action_add"
+            android:tint="#ffffff" />
+
+        <EditText
+            android:id="@+id/treatments_newtreatment_insulinamount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:inputType="numberDecimal"
+            android:minWidth="200dp"
+            android:padding="10dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:gravity="center_horizontal" />
+
+        <ImageView
+            android:id="@+id/treatments_newtreatment_insulinamount_minus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/circle"
+            android:backgroundTint="#ffffff"
+            android:src="@drawable/ic_action_minus"
+            android:tint="#ffffff" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="10dp"
         android:text="@string/treatments_newtreatment_carbsamount_label"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_gravity="center_horizontal"/>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/treatments_newtreatment_carbsamount"
-        android:padding="10dp"
-        android:minWidth="200dp"
-        android:layout_gravity="center_horizontal"
-        android:inputType="numberDecimal"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
-
-    <Button
-        android:id="@+id/treatments_newtreatment_deliverbutton"
-        style="?android:attr/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:layout_weight="1"
-        />
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/treatments_newtreatment_carbsamount_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/circle"
+            android:backgroundTint="#ffffff"
+            android:src="@drawable/ic_action_add"
+            android:tint="#ffffff" />
+
+        <EditText
+            android:id="@+id/treatments_newtreatment_carbsamount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:inputType="numberDecimal"
+            android:minWidth="200dp"
+            android:padding="10dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:gravity="center_horizontal" />
+
+        <ImageView
+            android:id="@+id/treatments_newtreatment_carbsamount_minus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/circle"
+            android:backgroundTint="#ffffff"
+            android:src="@drawable/ic_action_minus"
+            android:tint="#ffffff" />
+
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/treatments_newtreatment_deliverbutton"
+            style="?android:attr/buttonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:text="OK"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
