--- a/app/src/main/res/layout/overview_fragment.xml
+++ b/app/src/main/res/layout/overview_fragment.xml
@@ -133,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="0.5"
-                android:text="TempBasal"
+                android:text="@string/overview_tempbasal_button"
                 android:textColor="@color/colorSetTempButton" />
 
             <Button
@@ -143,7 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="0.5"
-                android:text="Extended Bolus"
+                android:text="@string/overview_extendedbolus_button"
                 android:textColor="@color/colorSetExtendedButton" />
         </LinearLayout>
 
