--- a/app/src/main/res/layout/overview_newtempbasal_fragment.xml
+++ b/app/src/main/res/layout/overview_newtempbasal_fragment.xml
@@ -12,24 +12,25 @@
         android:orientation="horizontal">
 
         <RadioGroup
+            android:id="@+id/overview_newtempbasal_radiogroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/overview_newtempbasal_percent"
+                android:id="@+id/overview_newtempbasal_percent_radio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/overview_newtempbasal_percent_label"
+                android:layout_marginRight="20dp"
                 android:checked="true"
-                android:layout_marginRight="20dp" />
+                android:text="@string/overview_newtempbasal_percent_label" />
 
             <RadioButton
-                android:id="@+id/overview_newtempbasal_absolute"
+                android:id="@+id/overview_newtempbasal_absolute_radio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="U/h"
-                android:layout_marginLeft="20dp" />
+                android:layout_marginLeft="20dp"
+                android:text="U/h" />
         </RadioGroup>
 
     </LinearLayout>
@@ -47,16 +48,99 @@
             android:text="@string/overview_newtempbasal_basal_label"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <EditText
-            android:id="@+id/overview_newtempbasal_basal"
+        <LinearLayout
+            android:id="@+id/overview_newtempbasal_percent_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:inputType="numberDecimal"
-            android:minWidth="200dp"
-            android:padding="10dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+
+            <ImageView
+                android:id="@+id/overview_newtempbasal_basalpercent_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/ic_action_add"
+                android:tint="#ffffff"
+                android:layout_weight="0.5" />
+
+            <EditText
+                android:id="@+id/overview_newtempbasal_basalpercentinput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.5"
+                android:inputType="numberDecimal"
+                android:minWidth="100dp"
+                android:padding="10dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:gravity="center_horizontal" />
+
+            <ImageView
+                android:id="@+id/overview_newtempbasal_basalpercent_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/ic_action_minus"
+                android:tint="#ffffff"
+                android:layout_weight="0.5" />
+
+
+        </LinearLayout>
+
+       <LinearLayout
+            android:id="@+id/overview_newtempbasal_absolute_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+
+            <ImageView
+                android:id="@+id/overview_newtempbasal_basalabsolute_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/ic_action_add"
+                android:tint="#ffffff"
+                android:layout_weight="0.5" />
+
+            <EditText
+                android:id="@+id/overview_newtempbasal_basalabsoluteinput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.5"
+                android:inputType="numberDecimal"
+                android:minWidth="100dp"
+                android:padding="10dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:gravity="center_horizontal" />
+
+            <ImageView
+                android:id="@+id/overview_newtempbasal_basalabsolute_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/ic_action_minus"
+                android:tint="#ffffff"
+                android:layout_weight="0.5" />
+
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <RadioGroup
@@ -65,35 +149,35 @@
         android:layout_gravity="center_horizontal">
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0.5 h"
             android:id="@+id/overview_newtempbasal_05h"
-            android:checked="true" />
-
-        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1 h"
-            android:id="@+id/overview_newtempbasal_1h" />
+            android:checked="true"
+            android:text="0.5 h" />
 
         <RadioButton
+            android:id="@+id/overview_newtempbasal_1h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2 h"
-            android:id="@+id/overview_newtempbasal_2h" />
+            android:text="1 h" />
 
         <RadioButton
+            android:id="@+id/overview_newtempbasal_2h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3 h"
-            android:id="@+id/overview_newtempbasal_3h" />
+            android:text="2 h" />
 
         <RadioButton
+            android:id="@+id/overview_newtempbasal_3h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4 h"
-            android:id="@+id/overview_newtempbasal_4h" />
+            android:text="3 h" />
+
+        <RadioButton
+            android:id="@+id/overview_newtempbasal_4h"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 h" />
     </RadioGroup>
 
     <Button
