--- a/app/src/main/res/layout/overview_newextendedbolus_fragment.xml
+++ b/app/src/main/res/layout/overview_newextendedbolus_fragment.xml
@@ -18,16 +18,45 @@
             android:text="@string/treatments_newtreatment_insulinamount_label"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <EditText
-            android:id="@+id/overview_newextendedbolus_insulin"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:inputType="numberDecimal"
-            android:minWidth="200dp"
-            android:padding="10dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/overview_newextendedbolus_insulin_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/ic_action_add"
+                android:tint="#ffffff" />
+
+            <EditText
+                android:id="@+id/overview_newextendedbolus_insulin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:inputType="numberDecimal"
+                android:minWidth="200dp"
+                android:padding="10dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:gravity="center_horizontal" />
+
+            <ImageView
+                android:id="@+id/overview_newextendedbolus_insulin_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:backgroundTint="#ffffff"
+                android:src="@drawable/ic_action_minus"
+                android:tint="#ffffff" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <RadioGroup
@@ -36,35 +65,35 @@
         android:layout_gravity="center_horizontal">
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0.5 h"
             android:id="@+id/overview_newextendedbolus_05h"
-            android:checked="true" />
-
-        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1 h"
-            android:id="@+id/overview_newextendedbolus_1h" />
+            android:checked="true"
+            android:text="0.5 h" />
 
         <RadioButton
+            android:id="@+id/overview_newextendedbolus_1h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2 h"
-            android:id="@+id/overview_newextendedbolus_2h" />
+            android:text="1 h" />
 
         <RadioButton
+            android:id="@+id/overview_newextendedbolus_2h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3 h"
-            android:id="@+id/overview_newextendedbolus_3h" />
+            android:text="2 h" />
 
         <RadioButton
+            android:id="@+id/overview_newextendedbolus_3h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4 h"
-            android:id="@+id/overview_newextendedbolus_4h" />
+            android:text="3 h" />
+
+        <RadioButton
+            android:id="@+id/overview_newextendedbolus_4h"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 h" />
     </RadioGroup>
 
     <Button
