--- a/app/src/main/res/layout/configbuilder_simpleitem.xml
+++ b/app/src/main/res/layout/configbuilder_simpleitem.xml
@@ -9,35 +9,34 @@
         android:id="@+id/configbuilder_simpleitem_checkboxenabled"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_gravity="center"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="Enabled" />
+        android:text="@string/enabled" />
 
     <CheckBox
         android:id="@+id/configbuilder_simpleitem_checkboxvisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_gravity="center"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="Show" />
+        android:text="@string/visible" />
 
     <ImageView
         android:id="@+id/configbuilder_simpleitem_upimage"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@android:drawable/arrow_up_float" />
+        android:src="@android:drawable/arrow_up_float"
+        android:contentDescription="@string/up" />
 
     <TextView
         android:id="@+id/configbuilder_simpleitem_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Plugin name"
+        android:text=""
         android:textStyle="bold" />
 
 
