--- a/app/src/main/res/xml/pref_openapsma.xml
+++ b/app/src/main/res/xml/pref_openapsma.xml
@@ -2,36 +2,36 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
         android:key="bgRange"
-        android:title="APS target BG range">
+        android:title="@string/openapsma_targetrange_label">
         <EditTextPreference
             android:defaultValue=""
             android:key="openapsma_min_bg"
             android:numeric="decimal"
-            android:summary="The minimum value you consider to be in range."
-            android:title="Low Value" />
+            android:summary="@string/openapsma_low_summary"
+            android:title="@string/openapsma_low_title" />
         <EditTextPreference
             android:defaultValue=""
             android:key="openapsma_max_bg"
             android:numeric="decimal"
-            android:summary="The maximum value you consider to be in range."
-            android:title="High Value" />
+            android:summary="@string/openapsma_high_summary"
+            android:title="@string/openapsma_high_title" />
     </PreferenceCategory>
     <PreferenceCategory
         android:key="aps_limits"
-        android:title="APS Limits">
+        android:title="@string/openapsma_apslimits_label">
 
         <EditTextPreference
             android:defaultValue="1"
             android:key="openapsma_max_basal"
             android:numeric="decimal"
-            android:summary="Max U/hr a Temp Basal can be set to"
-            android:title="Max Basal" />
+            android:summary="@string/openapsma_maxbasal_summary"
+            android:title="@string/openapsma_maxbasal_title" />
         <EditTextPreference
             android:defaultValue="1.5"
             android:key="openapsma_max_iob"
             android:numeric="decimal"
-            android:summary="Maximum amount of non-bolus IOB OpenAPS can deliver"
-            android:title="Max Basal IOB" />
+            android:summary="@string/openapsma_maxiob_summary"
+            android:title="@string/openapsma_maxbasaliob_title" />
     </PreferenceCategory>
 
 </PreferenceScreen>
