--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,7 +5,7 @@
         <item>@string/closedloop</item>
         <item>@string/openloop</item>
     </string-array>
-    <string-array name="aps_modeValues">
+    <string-array name="aps_modeValues" translatable="false">
         <item>closed</item>
         <item>open</item>
     </string-array>
