add bg language

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -26,6 +26,9 @@
         android:id="@+id/de_lang"
         android:title="@string/de_lang" />
     <item
+        android:id="@+id/bg_lang"
+        android:title="@string/bg_lang" />
+    <item
         android:id="@+id/nav_exit"
         android:title="@string/nav_exit" />
 </menu>
