--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -29,6 +29,9 @@
         android:id="@+id/bg_lang"
         android:title="@string/bg_lang" />
     <item
+        android:id="@+id/nav_testalarm"
+        android:title="@string/testalarm" />
+    <item
         android:id="@+id/nav_exit"
         android:title="@string/nav_exit" />
 </menu>
