--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,15 @@
         <item>closed</item>
         <item>open</item>
     </string-array>
+
+    <string-array name="languagesArray">
+        <item>@string/en_lang</item>
+        <item>@string/cs_lang</item>
+        <item>@string/bg_lang</item>
+    </string-array>
+    <string-array name="languagesValues" translatable="false">
+        <item>en</item>
+        <item>cs</item>
+        <item>bg</item>
+    </string-array>
 </resources>
