--- a/app/src/main/res/xml/pref_closedmode.xml
+++ b/app/src/main/res/xml/pref_closedmode.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
         android:key="aps_general"
-        android:title="General">
+        android:title="@string/loop">
 
         <ListPreference
             android:title="@string/apsmode_title"
