--- a/app/src/main/res/layout/danar_fragment.xml
+++ b/app/src/main/res/layout/danar_fragment.xml
@@ -4,4 +4,15 @@
     android:layout_height="match_parent"
     tools:context="info.nightscout.androidaps.plugins.DanaR.DanaRFragment">
 
+    <com.joanzapata.iconify.widget.IconTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:layout_weight="1.02"
+        android:gravity="center_vertical|right"
+        android:text="B"
+        android:textSize="20dp"
+        android:id="@+id/danar_connection"
+        android:layout_gravity="center_vertical" />
 </FrameLayout>
